# ProxyGuard-ML

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: config.py  db.py  logging_config.py  main.py  middleware.py  security.py
app/api/: data.py  experiments.py  predict.py  schemas.py  settings.py  train.py
app/ml/: data_generator.py  evaluate.py  features.py  labels.py  models.py  predict.py  train.py
app/services/: __init__.py  dataset_service.py  experiment_service.py  mock_store.py  predict_service.py  settings_service.py  train_service.py
app/static/css/: app.css
app/static/js/: app.js  theme-bootstrap.js
app/templates/: base.html  dashboard.html  data.html  experiments.html  predict.html  settings.html  train.html
deploy/: nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  OPENSOURCE_SCORECARD.md  OPTIMIZATION.md  README.md  README.zh-CN.md  TESTING.md  experiment-guide.md  schema.sql  system-design.md  毕业设计审查与答辩通关报告.md
reports/: README.md  ablation_results.json
scripts/: run_ablation.py  run_experiments.py
tests/: test_api_contracts.py  test_api_mock.py  test_api_real.py  test_data_generator.py  test_dataset_service.py  test_evaluate.py  test_features.py  test_labels.py  test_models_train.py  test_project_hardening.py  test_runtime_hardening.py  test_ui_contracts.py
